<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" >
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <!--Movie info-->
            <TextView
                android:text="@string/movieSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp" />
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/movieTitleSearch"
                    android:hint="@string/title"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5sp"
                    android:layout_marginLeft="5sp"
                    android:layout_weight="1" />
                <Button
                    android:id="@+id/movieButtonSearch"
                    android:text="@string/movieSearchText"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <TextView
                android:id="@+id/movieTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp"
                android:layout_marginLeft="15sp"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/movieDirector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp"
                android:layout_marginLeft="15sp"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/movieActors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp"
                android:layout_marginLeft="15sp"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/movieGenre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp"
                android:layout_marginLeft="15sp"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/movieRuntime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp"
                android:layout_marginLeft="15sp"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/movieImdbRating"
                android:text="Waiting for data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp"
                android:layout_marginLeft="15sp"
                android:textSize="18sp" />
            <Button
                android:id="@+id/add_movie"
                android:text="@string/add"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>